# luau-docgen

./: .gitmodules  Cargo.toml  README.md  a.luau  a.md  a2.md  b.luau  b.md  discord-luau-apitypes.md  discord-luau-resttypes.md  discord.md  examplefunc.md  init.luau  simple.luau  spec_comment.luau  spec_comment.md  testplugin.luau
cli/: argparser.luau  argparserimpl.luau  cli.luau  typeparser.luau
cli/rtenhance/: base.luau  defaults.luau  getrt.luau  lune.luau
contrib/luaup-parse/: parse.luau  parseimpl.luau  stringify.luau  test.luau  testp.luau  testrun.sh
contrib/luaup-parse/rtenhance/: getrt.luau  lune.luau  types.luau
documentor_core/: argparser.luau  convertcommentimpl.luau  convertcomments.luau  documentor.luau  istate.luau  parseanonymousargdata.luau  partial.luau  pp.luau  table.luau  transformrepr.luau  typeparser.luau  types.luau
documentor_core/documentors/: arg.luau  type.luau  typefield.luau  typeset.luau
documentor_core/finalizer/: defaultfinalizer.luau
documentor_core/markdownir/: markdown.luau  markdownformatter.luau
documentor_core/plugins/: inline_heuristic.luau
documentor_core/rtenhance/: defaults.luau  getrt.luau  lune.luau
documentor_core/transforms/: normalizefunction.luau
examples/: a.luau  a.md  b.luau  b.md  discord-luau-apitypes.md  discord-luau-resttypes.md  discord.md  luaup-cst.md  p.luau  simple.luau  simple.md
plugins/: inline_heuristic.luau  testplugin.luau
src/: args.rs  comments.rs  documentor.luau  lua_api.rs  main.rs  token_ref_extractor.rs  token_ref_extractor_v2.rs  type_gen.rs
src/builtins/: argparser.luau  argparserimpl.luau  convertcommentimpl.luau  convertcomments.luau  documentor.luau  istate.luau  markdownformatter.luau  mdutils.luau  table.luau  transformrepr.luau  types.luau
src/builtins/documentors/: arg.luau  (+5 more)
(+28 files in other folders)
